<resources>
    <string name="app_name" translatable="false">Beebox</string>
    <string name="action_settings">Settings</string>

    <string name="contact">Contact</string>
    <string name="salutation">Hello, friend!</string>
    <string name="text_salutation">Welcome</string>
    <string name="second_text_salutation">by Beebox</string>

    <string name="navigation_drawer_open" translatable="false">Abrindo NavView</string>
    <string name="navigation_drawer_close" translatable="false">Fechando NavViewr</string>

    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="add_image">Take a picture</string>

    <string name="maps_key" translatable="false">AIzaSyD2weuXVFlPwdAIEWOAScQ9W9Q_axVbu4Y</string>
    <string name="take_a_pic">Take a picture</string>
    <string name="save">Save</string>
    <string name="places">Places</string>
    <string name="date">Date:  </string>
    <string name="exit">Sair</string>

    <string name="contact_en">Swarms Contacts</string>
    <string name="lb_contact_one">County Agricultural Commissioner/Weights and Measures Department</string>
    <string name="contact_one">(626) 575-5471</string>
    <string name="lb_contact_two"></string>
    <string name="contact_two"></string>
    <string name="info">For more information:<u>https://2017.spaceappschallenge.org/challenges/our-ecological-neighborhood/migratory-travels-and-travel-stories/teams/neowise-beebox/project</u></string>
    <string name="info2">SpaceApps Challenge 2017 Curitiba</string>

    <string name="team">team</string>
    <string name="matheus_catossi" translatable="false">Matheus Catossi</string>
    <string name="desc_matheus_catossi" translatable="false">Desenvolver Web, Mobile e criador de interfaces com IA por Ex.: ChatBot. </string>
    <string name="nathalia_garcial" translatable="false">Nathalia Garcia</string>
    <string name="desc_nathalia_garcial" translatable="false">Design, nerd e aspirante musical com foco em UX e animação 2D.</string>
    <string name="vinicius_luiz" translatable="false">Vinicius Luiz</string>
    <string name="desc_vinicius_luiz" translatable="false">Desenvolvedor Web cursando Sistema de Informação.</string>
    <string name="wilder_roberto" translatable="false">Wilder Roberto</string>
    <string name="desc_wilder_roberto" translatable="false">Desenvolvedor Web e Mobile.</string>
    <string name="julio_cesar" translatable="false">Julio Cesar</string>
    <string name="desc_julio_cesar" translatable="false">Facilitador de Bussiness do Ideias de Futuro e formado em Vendas.</string>
    <string name="intro_1_title">Find bees</string>
    <string name="intro_1_desc">Do you know any beehive or a location with a lot of bees?</string>
    <string name="intro_2_title">Tell where they\'re living</string>
    <string name="intro_2_desc">Take a picture of them so we can display on our website. Places were they can be relocated will be shown so interested institutions can help!</string>
    <string name="intro_3_title">Help to save them</string>
    <string name="intro_3_desc">Share with your friends and keep the bees safe!</string>
</resources>
