<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingTop="@dimen/fab_margin"
    android:paddingBottom="@dimen/medium_margin"
    android:paddingRight="@dimen/medium_margin"
    android:paddingLeft="@dimen/medium_margin"
    tools:context="com.project.spaceapps.beebox.beebox.ContactActivity">

    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:paddingBottom="@dimen/fab_margin"
        android:textColor="@color/colorText"
        android:text="@string/contact_en"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/lb_contact_one"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/colorText"
        android:text="@string/contact_one"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/lb_contact_two"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_two"
        android:textColor="@color/colorText"
        android:textSize="18dp" />

    <View
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="0.8px"
        android:background="@color/colorAccent" />

    <TextView
        android:textAlignment="center"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/colorText"
        android:text="@string/info2"
        />

    <View
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="0.8px"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_margin="10dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/nasa"/>

        <ImageView
            android:layout_margin="10dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/spaceapps"/>

        <ImageView
            android:layout_margin="10dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/jupter"/>


    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="0.8px"
        android:background="@color/colorAccent" />

    <TextView
        android:textAlignment="center"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/colorText"
        android:text="@string/info"
        />


</LinearLayout>
