<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingTop="@dimen/fab_margin"
    android:paddingBottom="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:paddingLeft="@dimen/fab_margin"
    tools:context="com.project.spaceapps.beebox.beebox.ContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/julio_cesar"
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/julio_cesar"/>

        <TextView
            android:layout_marginLeft="@dimen/fab_margin"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/desc_julio_cesar"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/matheus_catossi"
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/matheus_catossi"/>

            <TextView
                android:layout_marginLeft="@dimen/fab_margin"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/desc_matheus_catossi"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/nathalia_garcia"
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/nathalia_garcial"/>

            <TextView
                android:layout_marginLeft="@dimen/fab_margin"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/desc_nathalia_garcial"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/vinicius_luiz"
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/vinicius_luiz"/>

            <TextView
                android:layout_marginLeft="@dimen/fab_margin"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/desc_vinicius_luiz"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/wilder_roberto"
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/wilder_roberto"/>

            <TextView
                android:layout_marginLeft="@dimen/fab_margin"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/desc_wilder_roberto"/>
        </LinearLayout>

    </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>