<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:id="@+id/headerView">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/iv_bee"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                app:srcCompat="@drawable/logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="40dp"
            android:gravity="bottom"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/colorBackground"
                android:id="@+id/tv_salutation"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salutation" />

            <TextView
                android:id="@+id/tv_text_salutation"
                android:textColor="@color/colorBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:text="@string/text_salutation" />

            <TextView
                android:id="@+id/tv_second_text_salutation"
                android:layout_marginRight="10dp"
                android:textSize="12dp"
                android:textColor="@color/colorSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_text_salutation" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
